trunk/Archive2/95/d93e990069addd/output
main.cpp: In function 'int main()':
main.cpp:19:21: error: too few arguments to function 'std::function<int()> fn(NoCopy (*)())'
     std::cout << fn() << std::endl;
                     ^
main.cpp:17:26: note: declared here
     std::function<int()> fn(NoCopy());
                          ^
